[build-system]
requires = [
  "setuptools>=61",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "oliver_framework"
version = "1.1.6"
description = "Oliver Python Framework"
requires-python = ">=3.8"
authors = [{ name = "Oliver Huynh", email = "oliver@jufist.com" }]
dependencies = [
  "azure-storage-blob",
  "pyodbc",
  "python-dotenv",
  "schedule",
  "pydispatcher",
  "sqlalchemy",
  "colorlog",
  "pystray",
  "Pillow",
  "tk",
  "sqlparse",
]

[project.urls]
Homepage = "https://github.com/oliverhuynh/oliver-framework"
